# gitops-tui

./: Cargo.toml  Dockerfile  Makefile  README.md  example-config.yaml
src/: main.rs
src/config/: cfg_models.rs  mod.rs
src/git/: mod.rs  tests.rs
src/tui/: commits.rs  mod.rs
