[package]
name = "gitops-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25"
git2 = "0.17.1"
serde_yaml = "0.9"
tui = "0.19"

[dependencies.serde]
version = "1.0"
features = ["derive"]

